get the styles in place

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <!-- Navigation -->
     <nav>
-        <img src="img/techcrunch-logo.png" alt="Logo">
-        <h3>Join Techcrunch+</h3>
+        <img class="logo" src="img/techcrunch-logo.png" alt="Logo">
+        <h5>Join Techcrunch+</h5>
         <a class="login" href="#">Login</a>
 
         <ul>
@@ -34,22 +34,22 @@
 
     <!-- Main content -->
     <main>
-        <h1>Reddit rolls out a web version of Reddit Talk, its live audio product</h1>
+        <h2>Reddit rolls out a web version of Reddit Talk, its live audio product</h1>
         <span>Amanda Silberling</span>
+        <br>
         <img src="img/reddit-talk.webp" alt="Reddit Talk">
     </main>
 
     <!-- sidebar -->
     <aside>
-        <h2>3 warning signs that your investor will leave you on the sidelines</h2>
+        <h3>3 warning signs that your investor will leave you on the sidelines</h2>
         <span>Michael Redd</span>
-        <h2>The Spotify-Rogan saga highlights the distinction between publishers and platforms</h2>
+        <h3>The Spotify-Rogan saga highlights the distinction between publishers and platforms</h2>
         <span>Amanda Silberling</span>
-        <h2>James Murdoch and Uday Shankar return with $1.5 billion Qatar-backed investment firm Bodhi Tree, to focus on India and Southeast Asia</h2>
+        <h3>James Murdoch and Uday Shankar return with $1.5 billion Qatar-backed investment firm Bodhi Tree, to focus on India and Southeast Asia</h2>
         <span>Manish Singh</span>
-        <h2>Samsung kills the Note, so the Galaxy S22 Ultra can fly</h2>
+        <h3>Samsung kills the Note, so the Galaxy S22 Ultra can fly</h2>
         <span>Brian Heater</span>
     </aside>
-    <h1></h1>
 </body>
 </html>
